test/sematest/invalid/array_creation_with_wrong_type2.java
class A {
  public static void main(String[] args) {
    new A[new A[4]];
  }
}